[#194] - Agregado test para crear un nuevo tratamiento.
